--- a/website/src/why.html
+++ b/website/src/why.html
@@ -1,7 +1,7 @@
 ---
 layout: layouts/main.html
-title: "SimpleX Network - Philosophy"
-description: "The philosophy behind SimpleX: a network with no accounts, no identities, and no way to know who you are."
+title: "Why we built SimpleX Network"
+description: "A network with no accounts, no identities, and no way to know who you are."
 templateEngineOverride: njk
 noGlossary: true
 ---
