--- a/website/src/why.html
+++ b/website/src/why.html
@@ -11,7 +11,7 @@ noGlossary: true
 <section class="min-h-screen px-5 py-24 md:py-32 lg:py-40">
   <div class="max-w-[680px] mx-auto">
 
-    <h1 class="text-grey-black dark:text-white text-[28px] md:text-[36px] lg:text-[42px] font-bold leading-[1.2] tracking-[-0.01em] mb-12 md:mb-16">
+    <h1 class="text-grey-black dark:text-white text-[24px] md:text-[32px] lg:text-[38px] font-bold leading-[1.2] tracking-[-0.01em] text-center mb-12 md:mb-16">
       {{ "why-p1" | i18n({}, lang) | safe }}
     </h1>
 
@@ -39,7 +39,7 @@ noGlossary: true
       {{ "why-p7" | i18n({}, lang) | safe }}
     </p>
 
-    <p class="text-[32px] md:text-[40px] lg:text-[48px] font-bold leading-[1.15] gradient-text">
+    <p class="text-[36px] md:text-[46px] lg:text-[54px] font-bold leading-[1.15] text-center gradient-text">
       {{ "why-tagline" | i18n({}, lang) | safe }}
     </p>
 
