--- a/website/src/why.html
+++ b/website/src/why.html
@@ -1,6 +1,6 @@
 ---
 layout: layouts/main.html
-title: "Why we built SimpleX Network"
+title: "Why we are building SimpleX Network"
 description: "A network with no accounts, no identities, and no way to know who you are."
 templateEngineOverride: njk
 noGlossary: true
@@ -35,8 +35,12 @@ noGlossary: true
       {{ "why-p6" | i18n({}, lang) | safe }}
     </p>
 
-    <p class="text-grey-black dark:text-white text-[20px] md:text-[24px] lg:text-[26px] font-medium leading-[1.5] mb-10 md:mb-14">
+    <p class="text-grey-black dark:text-white text-[18px] md:text-[20px] lg:text-[22px] font-normal leading-[1.6] mb-6 md:mb-8">
       {{ "why-p7" | i18n({}, lang) | safe }}
+    </p>
+
+    <p class="text-grey-black dark:text-white text-[20px] md:text-[24px] lg:text-[26px] font-medium leading-[1.5] mb-10 md:mb-14">
+      {{ "why-p8" | i18n({}, lang) | safe }}
     </p>
 
     <p class="text-[36px] md:text-[40px] lg:text-[46px] font-bold leading-[1.15] gradient-text">
