website: why we are building SimpleX Network (#6657)
* website: why SimpleX exists

* doc

* size, centred

* why

* why we built SimpleX Network

* why link

* para gap

* cleaner layout

* link to why

* update

* fix script

* ru correction

---------

Co-authored-by: Evgeny @ SimpleX Chat <259188159+evgeny-simplex@users.noreply.github.com>

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -145,6 +145,7 @@ active_home: true
                         <h2>{{ "index-nextweb-h2" | i18n({}, lang) | safe }}</h2>
                         <p>{{ "index-nextweb-p1" | i18n({}, lang) | safe }}</p>
                         <p>{{ "index-nextweb-p2" | i18n({}, lang) }}</p>
+                        <a class="gradient-text" href="{{ '' if lang == 'en' else '/' ~ lang }}/why">{{ "why-footer-link" | i18n({}, lang) | safe }}</a>
                     </div>
                 </div>
             </section>
