style(website): match /file page top padding with /directory

--- a/website/src/file.html
+++ b/website/src/file.html
@@ -180,7 +180,7 @@ active_file: true
 
 </style>
 
-<section class="bg-secondary-bg-light dark:bg-primary-bg-dark py-10 lg:py-16 mt-[66px] px-5">
+<section class="bg-secondary-bg-light dark:bg-primary-bg-dark py-10 mt-[66px] px-5">
   <div class="container flex flex-col items-center mx-auto">
     <noscript>
       <p class="text-center text-grey-black dark:text-white py-10">
